# matrixbox-c

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: matrix.h  matrix_io.h
src/: cli.c  main.c  matrix.c  matrix_io.c
tests/: test_gauss.c  test_matrix.c  test_mul.c  test_ops.c
